# light

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  light.example.toml  lightw.toml
src/: config.rs  lib.rs  main.rs  postgres.rs
src/model/: mod.rs  user.rs
src/routes/: create_user.rs  delete.rs  delete_user.rs  image.rs  mod.rs  regen_user.rs  upload.rs
