[package]
name = "light"
version = "0.1.0"
authors = ["diced <pranaco2@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "2.1.0"
actix-web = "4.0.0-beta.4"
actix-files = "0.6.0-beta.3"
actix-multipart = "0.4.0-beta.3"
tokio-postgres = { version = "0.7.0", features = ["with-serde_json-1"] }
futures = "0.3.13"

rand = "0.8.3"

serde = "1.0.125"
toml = "0.5.8"